# N2Lib

./: .gitignore
N2/: CMakeLists.txt  N2.pro  bld_.bat  bld_release.bat  main.cpp
N2/export/common/: IControl.h  ILauncher.h  ITreeNode.h  N2Base.h  N2BaseSerialize.h  N2Commands.h  N2ConcreteXMLParser.h  N2ControlObject.h  N2Defines.h  N2Dissection.h  N2Environment.h  N2LiveObjectsPolicy.h  N2Log.h  N2Misc.h  N2Module.h  N2ModulesManager.h  N2Parser.h  N2ParserXML.h  N2Paths.h  N2ProjectNode.h  N2ProjectSpecInfo.h  N2RapidXMLParser.h  N2RealParser.h  N2Register.h  N2Serializer.h  N2Standart2014ProjectNode.h  N2TinyXMLParser.h  N2TreeNode.h  N2Types.h  N2Variable.h  N2XMLF.h  configuration.h  isolator.h  tuner.h  user_node.h
N2/src/: N2AllOperatingState.cpp  N2Base.cpp  N2Control.cpp  N2Control.cpp.autosave  N2ControlObject.cpp  N2Dissection.cpp  N2DllSharedAccess.cpp  N2Environment.cpp  N2HelpParserStandartProject.cpp  N2Log.cpp  N2Module.cpp  N2ModuleExternal.cpp  N2ModulesManager.cpp  N2OperatingState.cpp  N2Order.cpp  N2Phelper.cpp  N2Processor.cpp  N2RapidXMLParser.cpp  N2Register.cpp  N2StandartProjectNode.cpp  N2System.cpp  N2TinyXMLParser.cpp  N2Types.cpp  N2Variable.cpp  N2VariablesManager.cpp
N2/src/include/: N2AllOperatingState.h  N2Control.h  N2DllSharedAccess.h  N2HelpParserStandart2014Project.h  N2LinuxSharedAccess.h  N2Modules.h  N2OperatingState.h  N2Order.h  N2ParserExternal.h  N2Phelper.h  N2Processor.h  N2SharedAccess.h  N2SharedAccessWorker.h  N2Types.h  N2VariablesManager.h
N2/tests/: CMakeLists.txt  Testing.h
N2/tests/functional/: CMakeLists.txt
N2/tests/functional/All/: All.sln
N2/tests/functional/Environment/: CMakeLists.txt  Environment.cpp  Environment.sln  Environment.vcxproj  Environment.vcxproj.filters  stdafx.cpp
N2/tests/functional/LoadingProject/: CMakeLists.txt  LoadingProject.cpp  LoadingProject.sln  LoadingProject.vcxproj  LoadingProject.vcxproj.filters  prjfile.xprj  stdafx.cpp
N2/tests/functional/MemoryAllocationAndControl/: CMakeLists.txt  MemoryAllocationAndControl.cpp  MemoryAllocationAndControl.sln  MemoryAllocationAndControl.vcxproj  MemoryAllocationAndControl.vcxproj.filters  stdafx.cpp
N2/tests/functional/ModuleManager/: CMakeLists.txt  CMakeLists.txt.bak  ModuleManager.cpp  ModuleManager.sln  ModuleManager.vcxproj  ModuleManager.vcxproj.filters  stdafx.cpp
N2/tests/functional/TotalControl/: CMakeLists.txt  TotalControl.cpp  TotalControl.sln  TotalControl.vcxproj  TotalControl.vcxproj.filters  ext.x  prj.xprj  stdafx.cpp  tree.x
N2/tests/functional/TreeTests/: CMakeLists.txt  TreeTests.cpp  TreeTests.sln  TreeTests.vcxproj  TreeTests.vcxproj.filters  stdafx.cpp
N2/tests/functional/VariableComposite/: CMakeLists.txt  VariableComposite.cpp  VariableComposite.sln  VariableComposite.vcxproj  VariableComposite.vcxproj.filters  stdafx.cpp
N2/tests/functional/test_funk_mainwindow/: CMakeLists.txt
N2/tests/units/: CMakeLists.txt
N2/tests/units/test_N2Commands/: CMakeLists.txt  test_N2Commands.cpp
N2/tests/units/test_N2Dissection/: CMakeLists.txt  test_N2Dissection.cpp
N2/tests/units/test_N2DllSharedAccess/: CMakeLists.txt  test_N2DllSharedAccess.cpp
N2/tests/units/test_N2LiveObjectsPolicy/: CMakeLists.txt  test_N2LiveObjectsPolicy.cpp
N2/tests/units/test_N2Log/: CMakeLists.txt  test_N2Log.cpp
N2/tests/units/test_N2Module/: CMakeLists.txt  ReadMe.txt  test_N2Module.cpp
N2/tests/units/test_N2Modules/: CMakeLists.txt  test_N2Modules.cpp
N2/tests/units/test_N2ModulesManager/: CMakeLists.txt  test_N2ModulesManager.cpp
N2/tests/units/test_N2OperatingState/: CMakeLists.txt  test_N2OperatingState.cpp
N2/tests/units/test_N2TinyXMLParser/: CMakeLists.txt  test_N2TinyXMLParser.cpp
N2/tests/units/test_N2Variables/: test_N2Variables.cpp  test_N2Variables.pro  test_N2Variables_2.cpp
N2/tests/units/test_N2VariablesManager/: CMakeLists.txt  test_N2VariablesManager.cpp
N2/tests/units/test_N2XMLF/: CMakeLists.txt  test_N2XMLF.cpp
N2/utils/: CMakeLists.txt
N2/utils/tinyxml/lib/: tinyxml.lib  tinyxmld.lib
N2/utils/tinyxml/source/: tinyXmlTest.vcproj  tinyXmlTestSTL.vcproj  tinystr.cpp  tinyxml.cpp  tinyxml.h  tinyxml.sln  tinyxmlSTL.vcproj  tinyxml_lib.vcproj  tinyxml_lib.vcxproj  tinyxml_lib.vcxproj.filters  xmltest.cpp
temp/: tags_tests.xml
